--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/vacationListPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/vacationListPaging.html
@@ -5,6 +5,34 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
 <style>
+	.pagingArea{
+		margin : auto;
+		display : block;
+	}
+	.search-area {
+		font-family: 'MinSans-Medium';
+	}
+	
+	.search-area button:hover{
+	background:  #7DBEED ;
+	}
+	
+	.search-area #searchCondition {
+		height:30px;
+		margin-top:-3px;
+	}
+	
+	/* 페이징버튼 css */
+	.pagingArea button {
+		border-radius: 5px;
+		 width:40px; 
+		 height:30px;
+		 margin: 5px;
+	     background-color: #7dbeed96;
+	     border-color:gray;
+	     border-style: none;
+	}
+	
 </style>
 </head>
 
