--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -57,8 +57,8 @@
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" id="adminMyPage"><img src="/image/mypage.png" class="btn2"></a>
-            
+                            <a class="nav-link" id="adminMyPage" href="admin/hrCard/selectOneAdminMove"><img src="/image/mypage.png" class="btn2"></a>
+            				
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link" href="/member/logout"><img src="/image/logout.png" class="btn2"> </a>
