--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminList.html
@@ -12,12 +12,33 @@
             line-height: 1.6
         }
 
-        /* 전체 크기 */
+        /* 페이징버튼 움직이는거 멈추기 */
         .container {
-            width: 1500px;
-            margin: 0 auto;
-        }
-
+           height: 400px;
+        } 
+		
+		.section{
+			width: 1000px;
+			font-family: 'MinSans-Medium';
+		    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
+		    margin-left: 20px !important;
+			margin-top: 20px !important;
+		}
+		
+		.adminListTable{
+			width: 1000px;
+			border: 1px solid black;
+		}
+		
+		.adminListTable tr{
+			height: 45px;
+		}
+		
+		.adminListTable td{
+		
+			height: 45px;
+		}
+		
         ul.tabs {
             margin: 0px;
             padding: 0px;
@@ -36,7 +57,7 @@
 
         /* 선택한 탭 css 설정 */
         ul.tabs li.current {
-            background: rgba(104, 228, 255, 1);
+            background-color: #86cdffa9;
             color: rgb(0, 0, 0);
         }
 
@@ -50,6 +71,33 @@
         .tab-content.current {
             display: inherit;
         }
+        
+        .search-area{
+        	text-align: right;
+			margin-bottom: 10px;
+			
+        }
+        
+        .ListPage{
+        	text-align: left;
+        	margin-bottom: 20px;
+        }
+        
+        .btn_search{
+        	margin-top:-6px;
+		    width:70px;
+		    height:32px;
+			border-radius: 5px;
+		    font-size:13px;
+		    padding: 0; 
+		    background-color: #7dbeed96; 
+		    border-style: none;
+        }
+        
+        .btn_search hover{
+        	background:  #7DBEED;
+        }
+        
     </style>
     
   
@@ -58,13 +106,16 @@
 <body>
 	<div th:replace="/common/Header.html"></div>
 	<div th:include="admin/adminAside.html"></div>
+	<section class="section">
 	
 	<div class="container">
 	
-	
-
+	<div class="ListPage">
+	<div th:replace="/admin/hrCard/hr/selectAdminListHeader.html"></div>
+	</div>
        <div class="search-area" align="center">
 		<form id="searchForm" action="/admin/hrCard/hr/adminList" method="get" style="display: inline-block">
+		<span>재직자 조회</span> 
 				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
 					 name="searchCondition">
 					<option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
@@ -78,23 +129,35 @@
 			<input type="date" id="adminBirth" name="searchValue" style="display: none">
 			<input type="date" id="adminHireDate" name="searchValue" style="display: none">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
-			
-			<button class="btn btn-bs" type="submit">검색하기</button>
+		
+			<button class="btn_search" type="submit">검색</button>
 		</form>
-                 
          
-                <a href="/admin/hrCard/hr/retireAdminList">퇴사자 목록</a>
-
+                 
+         	<input type="radio" id="AdminRadio"  OnClick="location.href='/admin/hrCard/hr/adminList';">
+			<label for="AdminRadio">재직자</label> 
+			<input type="radio" id="retireAdminRadio" OnClick="location.href='/admin/hrCard/hr/retireAdminList'"> 
+			<label for="retireAdminRadio">퇴사자</label>
+	</div>
     
-                <table id="adminList" border="1">
+                <table class="adminListTable" id="adminList">
+                	<colgroup>
+	                <col style="width: 50px">
+	                <col style="width: 100px">
+	                <col style="width: 150px">
+	                <col style="width: 250px">
+	                <col style="width: 100px">
+	                <col style="width: 150px">
+	                </colgroup>
+                
                     <thead>
                         <tr>
-                            <th>관리자번호</th>
+                            <th>번호</th>
                             <th>이름</th>
                             <th>생년월일</th>
-                            <th>입사일</th>
-                            <th>직급명</th>
                             <th>전화번호</th>
+                            <th>직책</th>
+                            <th>입사일</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -102,19 +165,28 @@
 							<td th:text="${ index.adminNo }"></td>
 							<td th:text="${ index.adminName }"></td>
 							<td th:text="${ index.adminBirth }"></td>
-							<td th:text="${ index.adminHireDate }"></td>
-							<td th:text="${ index.adminJob }"></td>
 							<td th:text="${ index.adminPhone }"></td>
+							<td th:text="${ index.adminJob }"></td>
+							<td th:text="${ index.adminHireDate }"></td>
 						</tr>
                     </tbody>
                 </table>    
             </div>
-       </div>
        
      <input type="hidden" name="currentPage" value="1">
-	<div th:replace="admin/hrCard/hr/adminListPaging.html"></div>
-       
+	<div class="paging" th:replace="admin/hrCard/hr/adminListPaging.html"></div>
+    </section> 
+     
+     
     <script>
+    
+    	/* 라디오 버튼 */
+    	/* $("#adminRadio").click(function(){
+    		location.herf="/admin/hrCard/hr/adminList"
+    	})
+    	$("#retireAdminRadio").click(function(){
+    		location.herf="/admin/hrCard/hr/retireAdminList"
+    	}) */
         
         /* hover event */
         function hover(){
@@ -122,7 +194,7 @@
 
             for(let i = 0; i < employee.length; i++){
             	employee[i].onmouseenter = function(){
-                    this.parentNode.style.backgroundColor = "rgb(50,150,250)";
+                    this.parentNode.style.backgroundColor = " #7dbeed96";
                     this.parentNode.style.cursor = "pointer";
                 }
             	employee[i].onmouseout = function(){
