--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminListPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminListPaging.html
@@ -9,6 +9,30 @@
 		margin : auto;
 		display : block;
 	}
+	.search-area {
+		font-family: 'MinSans-Medium';
+	}
+	
+	.search-area button:hover{
+	background:  #7DBEED ;
+	}
+	
+	.search-area #searchCondition {
+		height:30px;
+		margin-top:-3px;
+	}
+	
+	/* 페이징버튼 css */
+	.pagingArea button {
+		border-radius: 5px;
+		 width:40px; 
+		 height:30px;
+		 margin: 5px;
+	     background-color: #7dbeed96;
+	     border-color:gray;
+	     border-style: none;
+	}
+	
 </style>
 </head>
 <body>
