--- a/com-project-clean/src/main/resources/templates/admin/hrCard/registVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/registVacation.html
@@ -6,83 +6,91 @@
 <title>Insert title here</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-<style type="text/css">
+<style>
+/* 결재 테이블 */
+.confirmTable td {
+	border: solid 1px;
+	font-size: 14px;
+}
 
-    /* 전체 div */
-    .container{
-        width: 1500px;
-        margin: 0 auto;
-    }
-  
-    /* 결재 승인 */
-    .tg2  {border-collapse:collapse;border-spacing:0;}
-      .tg2 td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:12px;
-        overflow:hidden;padding:5px;word-break:normal;}
-      .tg2 th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:12px;
-        font-weight:normal;overflow:hidden;padding:5px;word-break:normal;}
-      .tg2 .tg2-amwm{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top;}
+.comfirmBox td {
+	height: 75px;
+}
 
-    .comfirmBox td{
-        height: 75px;
-      }
+.confirmTable {
+	width: 550px;
+	margin-bottom: 20px;
+	
+}
 
-      /* .confirmTable{
-        margin: 20px;
-      } */
+.confirmNameBox{
+	 line-height: 80px;
+}
 
-      .confirmHeight{
-        margin: auto;
-        line-height: center;
-        line-height: 100px;
-      }
+.confirmDateBox{
+	height: 25px;
+}
 
+/* 인사 테이블 */
+.vacationTable{
+	width: 750px;
+}
 
-    /* 휴가신청서 */
-    .tg3  {border-collapse:collapse;border-spacing:0;}
-    .tg3 td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-    overflow:hidden;padding:10px 10px;word-break:normal;}
-    .tg3 th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-    font-weight:normal;overflow:hidden;padding:10px 10px;word-break:normal;}
-    .tg3 .tg3-7btt{border-color:inherit; font-weight:bold;text-align:center;vertical-align:top}
-    .vacationReason{
-      resize: none; width: 400px; height: 95px;
-    }
-    /* .confirmDateContainer{
-        margin: 25px;
-    } */
-    
+.vacationTable td {
+	border: solid 1px;
+	font-size: 14px;
+	padding: 10px 10px;
+}
 
-    .reason{
-        height: 100px;
-        line-height: 100px;
-    }
+.buttonBox{
+	margin-top: 10px;
+	width:750px;
+	text-align: center;
+}
 
-    .confirmLine{
-        line-height: 75px;
-    }
+.reasonBox{
+	height:150px;
+	text-align: center;
+	line-height: 100px;
+}
 
+.vacation_btn{
+	margin-top:-6px;
+	width:70px;
+	height:32px;
+	border-radius: 5px;
+	font-size:13px;
+	padding: 0; 
+	background-color: #7dbeed96; 
+	border-style: none;
+}
 
-    </style>
+.vacation_btn:hover{
+	background:  #7DBEED;
+}
+
+</style>
 </head>
 <body>
-<div th:replace="/common/Header.html"></div>
+	<div th:replace="/common/Header.html"></div>
 	<div th:include="admin/adminAside.html"></div>
-
+	<section class="section">
+	
  	<div class="container">
         <div class="confirmDateContainer">
   
     </div>
     <form id="vacationForm" action="registVacation/run" method="post">
-      <table class="tg2 confirmTable" style="table-layout: fixed; width: 588px">
+      <table class="confirmTable" style="table-layout: fixed; width: 588px">
         <colgroup>
-          <col style="width: 186px">
-          <col style="width: 201px">
-          <col style="width: 201px">
+         		<col style="width: 186px">
+	            <col style="width: 201px">
+	            <col style="width: 201px">
         </colgroup>
         <thead>
           <tr>
-            <td class="tg2-amwm">결재 신청 날짜</td>
-            <td class="tg2-amwm" colspan="2">
+            <td class="subTitle">결재 신청 날짜</td>
+            <td  colspan="2">
               <div width="50px" th:text="${today}"></div>
               <input style="display: none;" name="requestDate" th:value="${today}">
             </td>
@@ -90,50 +98,50 @@
         </thead>
         <tbody>
           <tr>
-            <td class="tg2-amwm confirmHeight" rowspan="3">결재</td>
-            <td class="tg2-amwm" width="50px">인사담당자</td>
-            <td class="tg2-amwm" width="50px">대표</td>
+            <td class="subTitle" rowspan="3">결재</td>
+            <td class="subTitle" width="50px">인사담당자</td>
+            <td class="subTitle" width="50px">대표</td>
           </tr>
           <tr class="comfirmBox">
             <td class="tg2-amwm">
               <div id="humanResource" name="humanResource"></div>
             </td>
-            <td class="tg2-amwm">
+            <td>
               <div id="boss" name="boss"></div>
             </td>
           </tr>
           <tr>
-            <td class="tg2-amwm" width="50px" height="15px"> </td>
-            <td class="tg2-amwm" width="50px"> </td>
+            <td width="50px" height="22px"></td>
+            <td width="50px" height="22px"></td>
           </tr>
         </tbody>
       </table>
       <br>
     <div class="registVacationContainer">
-        <table class="tg3" style="table-layout: fixed; width: 502px">
+        <table class="vacationTable" style="table-layout: fixed; width: 502px">
             <colgroup>
             <col style="width: 250px">
             <col style="width: 450px">
             </colgroup>
             <thead>
               <tr>
-                <th class="tg3-7btt" colspan="2">휴가신청서</th>
+                <td class="tg3-7btt" colspan="2" style="font-size: 20px">휴가신청서</td>
               </tr>
             </thead>
             <tbody>
               <tr>
               	<input style="display: none;" name="adminNo" th:value="${admin.adminNo}">
-                <td class="tg3-7btt">성명</td>
-                <td class="tg3-7btt" th:text="${admin.adminName}"></td>
+                <td class="subTitle">성명</td>
+                <td th:text="${admin.adminName}"></td>
                 <input style="display: none;" name="requestAdmin" th:value="${admin.adminName}">
               </tr>
               <tr>
-                <td class="tg3-7btt">직급</td>
-                <td class="tg3-7btt" th:text="${admin.adminJob}"></td>
+                <td class="subTitle">직급</td>
+                <td th:text="${admin.adminJob}"></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">휴가명</td>
-                <td class="tg3-7btt">
+                <td class="subTitle">휴가명</td>
+                <td>
                 	<select required id="vacationName" name="vacationName">
                 		<option>연차</option>
                 		<option>공가</option>
@@ -143,27 +151,33 @@
                 </td>
               </tr>
               <tr>
-                <td class="tg3-7btt">기간</td>
+                <td class="subTitle">기간</td>
                 <td class="tg3-7btt"><input type="date" id="vacationStartDate" name="vacationStartDate" min="vacationStartDate" required> ~ <input type="date" id="vacationEndDate" name="vacationEndDate" value="xxx" min="한달 후" max="올해" required></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">연락망</td>
+                <td class="subTitle">연락망</td>
                 <td class="tg3-7btt" th:text="${admin.adminPhone}"></td>
               </tr>
               <tr>
-                <td class="tg3-7btt"><div class="reason">사유</div></td>
-                <td class="tg3-7btt"><div class="reason"> <textarea class="vacationReason" id="vacationReason" name="vacationReason" required></textarea></div></td>
+                <td class="subTitle">사유</td>
+                <td class="tg3-7btt"><div class="reason"> <textarea class="vacationReason" id="vacationReason" name="vacationReason" cols="40" rows="5" required></textarea></div></td>
               </tr>
               <tr>
-                <td class="tg3-7btt" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
+                <td class="subTitle" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
               </tr>
             </tbody>
            </table>
         
-          <button type="button" id="vacationSubmit">신청</button>
+        <div class="buttonBox">
+          <button type="button" class="vacation_btn" id="vacationSubmit">신청</button>
       </div>
     </div>
+
    </form> 
+   
+  </div>
+   </section>
+   
     <script>
 		$("#vacationSubmit").click(function(){
 		 		
