--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyFirstVacationList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyFirstVacationList.html
@@ -6,18 +6,39 @@
 <title>Insert title here</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <style>
-        body {
+    body {
             margin-top: 100px;
             font-family: 'Trebuchet MS', serif;
             line-height: 1.6
         }
 
-        /* 전체 크기 */
+        /* 페이징버튼 움직이는거 멈추기 */
         .container {
-            width: 1500px;
-            margin: 0 auto;
-        }
-
+           height: 400px;
+        } 
+		
+		.section{
+			width: 1000px;
+			font-family: 'MinSans-Medium';
+		    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
+		    margin-left: 20px !important;
+			margin-top: 20px !important;
+		}
+		
+		.vacationListTable{
+			width: 1000px;
+			border: 1px solid black;
+		}
+		
+		.vacationListTable tr{
+			height: 45px;
+		}
+		
+		.vacationListTable td{
+		
+			height: 45px;
+		}
+		
         ul.tabs {
             margin: 0px;
             padding: 0px;
@@ -36,7 +57,7 @@
 
         /* 선택한 탭 css 설정 */
         ul.tabs li.current {
-            background: rgba(104, 228, 255, 1);
+            background-color: #86cdffa9;
             color: rgb(0, 0, 0);
         }
 
@@ -51,17 +72,47 @@
             display: inherit;
         }
         
-    </style>
+        .search-area{
+        	text-align: right;
+			margin-bottom: 10px;
+			margin-top: 30px;
+			
+        }
+        
+        .ListPage{
+        	text-align: left;
+        	margin-bottom: 20px;
+        }
+        
+        .btn_search{
+        	margin-top:-6px;
+		    width:70px;
+		    height:32px;
+			border-radius: 5px;
+		    font-size:13px;
+		    padding: 0; 
+		    background-color: #7dbeed96; 
+		    border-style: none;
+        }
+        
+        .btn_search hover{
+        	background:  #7DBEED;
+        }
+        
+</style>
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
 	<div th:include="admin/adminAside.html"></div>
 	
+	<section class="section">
 	 <div class="container">
 
         
         <div class="search-area" align="center">
 		<form id="searchForm" action="/admin/hrCard/vacation/standbyFirstVacationList" method="get" style="display: inline-block">
+				
+			<span>휴가 1차 결재 대기 목록 </span> 
 				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
 					 name="searchCondition">
 					<option value="requestAdmin" th:selected="${ searchCondition } == 'requestAdmin'">신청자</option>
@@ -75,12 +126,22 @@
 			<input type="date" id="vacationEndDate" name="searchValue" style="display: none">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
 			
-			<button class="btn btn-bs" type="submit">검색하기</button>
+			<button class="btn_search" type="submit">검색하기</button>
 		</form>
 
-		
+		</div>
 
-            <table id="vacationList" border="1" width="1000px">
+            <table class="vacationListTable" id="vacationList" border="1" width="1000px">
+               
+               <colgroup>
+	                <col style="width: 50px">
+	                <col style="width: 100px">
+	                <col style="width: 100px">
+	                <col style="width: 100px">
+	                <col style="width: 100px">
+	                <col style="width: 100px">
+	           </colgroup>
+               
                 <thead>
                     <tr>
                         <th>신청번호</th>
@@ -99,15 +160,19 @@
 						<td th:text="${ index.vacationStartDate }"></td>
 						<td th:text="${ index.vacationEndDate }"></td>
 						<td th:text="${ index.vacationName }"></td>
-						<td th:text="${ index.vacationFirstConfirmYn }"></td>
+						<td>
+							<span th:if="${ index.vacationFirstConfirmYn } == 'N'">결재대기</span>
+							<span th:unless="${ index.vacationFirstConfirmYn } == 'N'">결재완료</span>
+						</td>
 					</tr>
                 </tbody>
             </table>
         </div>
-	</div>
 	
 	<input type="hidden" name="currentPage" value="1">
 	<div th:replace="admin/hrCard/vacation/vacationListpaging.html"></div>
+	</section>
+	
 	<script>
 	 /* hover event */
 	    function hover(){
@@ -115,7 +180,7 @@
 	
 	        for(let i = 0; i < employee.length; i++){
 	        	employee[i].onmouseenter = function(){
-	                this.parentNode.style.backgroundColor = "rgb(50,150,250)";
+	                this.parentNode.style.backgroundColor = "#7dbeed96";
 	                this.parentNode.style.cursor = "pointer";
 	            }
 	        	employee[i].onmouseout = function(){
