--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyVacationDetail.html
@@ -6,180 +6,191 @@
 <title>Insert title here</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-<style type="text/css">
+<style>
+/* 결재 테이블 */
+.confirmTable td {
+	border: solid 1px;
+	font-size: 14px;
+}
 
-    /* 전체 div */
-    .container{
-        width: 1500px;
-        margin: 0 auto;
-    }
-  
-    /* 결재 승인 */
-    .tg2  {border-collapse:collapse;border-spacing:0;}
-      .tg2 td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:12px;
-        overflow:hidden;padding:5px;word-break:normal;}
-      .tg2 th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:12px;
-        font-weight:normal;overflow:hidden;padding:5px;word-break:normal;}
-      .tg2 .tg2-amwm{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top;}
+.comfirmBox td {
+	height: 75px;
+}
 
-    .comfirmBox td{
-        height: 75px;
-      }
+.confirmTable {
+	width: 550px;
+	margin-bottom: 20px;
+	
+}
 
-      /* .confirmTable{
-        margin: 20px;
-      } */
+.confirmNameBox{
+	 line-height: 80px;
+}
 
-      .confirmHeight{
-        margin: auto;
-        line-height: center;
-        line-height: 100px;
-      }
+.confirmDateBox{
+	height: 25px;
+}
 
+/* 인사 테이블 */
+.vacationTable{
+	width: 750px;
+}
 
-    /* 휴가신청서 */
-    .tg3  {border-collapse:collapse;border-spacing:0;}
-    .tg3 td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-    overflow:hidden;padding:10px 10px;word-break:normal;}
-    .tg3 th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-    font-weight:normal;overflow:hidden;padding:10px 10px;word-break:normal;}
-    .tg3 .tg3-7btt{border-color:inherit; font-weight:bold;text-align:center;vertical-align:top}
-    .vacationReason{
-      resize: none; width: 400px; height: 95px;
-    }
-    /* .confirmDateContainer{
-        margin: 25px;
-    } */
-    
+.vacationTable td {
+	border: solid 1px;
+	font-size: 14px;
+	padding: 10px 10px;
+}
 
-    .reason{
-        height: 100px;
-        line-height: 100px;
-    }
+.buttonBox{
+	margin-top: 20px;
+	width:750px;
+	text-align: center;
+}
 
-    .confirmLine{
-        line-height: 75px;
-    }
+.reasonBox{
+	height:150px;
+	text-align: center;
+	line-height: 100px;
+}
 
+.approval_btn{
+	margin-top:-6px;
+	width:70px;
+	height:32px;
+	border-radius: 5px;
+	font-size:13px;
+	padding: 0; 
+	background-color: #7dbeed96; 
+	border-style: none;
+}
 
-    </style>
+.approbal_btn:hover{
+	background:  #7DBEED;
+}
+
+.return_btn{
+	margin-top:-6px;
+	width:70px;
+	height:32px;
+	border-radius: 5px;
+	font-size:13px;
+	padding: 0; 
+	background-color: #7dbeed96; 
+	border-style: none;
+}
+
+.return_btn:hover{
+	background:  #7DBEED;
+}
+</style>
 </head>
 <body>
 
 	<div th:replace="/common/Header.html"></div>
 	<div th:include="admin/adminAside.html"></div>
-
+	<section class="section">
  	<div class="container">
         <div class="confirmDateContainer">
+        
   <form id="standbyVacation" method="post">
     </div>
-      <table class="tg2 confirmTable" style="table-layout: fixed; width: 588px">
+      <table class="confirmTable" style="table-layout: fixed; width: 588px">
         <colgroup>
-          <col style="width: 186px">
-          <col style="width: 201px">
-          <col style="width: 201px">
+	            <col style="width: 186px">
+	            <col style="width: 201px">
+	            <col style="width: 201px">
         </colgroup>
         <thead>
           <tr>
-            <td class="tg2-amwm">결재 신청 날짜</td>
-            <td class="tg2-amwm" colspan="2">
+            <td class="subTitle">결재 신청 날짜</td>
+            <td colspan="2">
               <div name="confirmDate" width="50px" th:text="${vacation.requestDate }"></div>
             </td>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td class="tg2-amwm confirmHeight" rowspan="3">결재</td>
-            <td class="tg2-amwm" width="50px">인사담당자</td>
-            <td class="tg2-amwm" width="50px">대표</td>
+            <td class="subTitle" rowspan="3">결재</td>
+            <td class="subTitle" width="50px">인사담당자</td>
+            <td class="subTitle" width="50px">대표</td>
           </tr>
           <tr class="comfirmBox">
-            <td class="tg2-amwm">
+            <td>
               <div id="humanResource" name="humanResource" th:text="${hrAdmin}"></div>
             </td>
-            <td class="tg2-amwm" >
+            <td>
               <div id="boss" name="boss"></div>
             </td>
           </tr>
           <tr>
-            <td class="tg2-amwm" width="50px" height="15px" th:text="${hrDate}"></td>
-            <td class="tg2-amwm" width="50px" height="15px"></td>
+            <td width="50px" height="22px" th:text="${hrDate}"></td>
+            <td width="50px" height="22px"></td>
           </tr>
         </tbody>
       </table>
-      
-        <br>
+
     <div class="registVacationContainer">
-        <table class="tg3" style="table-layout: fixed; width: 502px">
-            <colgroup>
+        <table class="vacationTable" style="table-layout: fixed; width: 502px">
+           <colgroup>
             <col style="width: 250px">
             <col style="width: 450px">
             </colgroup>
             <thead>
               <tr>
-                <th class="tg3-7btt" colspan="2">휴가신청서</th>
+                <td class="tg3-7btt" colspan="2" style="font-size: 20px">휴가신청서</td>
               </tr>
               <tr>
-              	<th class="tg3-7btt">신청 번호</th>
-                <th class="tg3-7btt" th:text="${vacation.vacationNo}"></th>
+              	<td class="subTitle">신청 번호</td>
+                <td class="tg3-7btt" th:text="${vacation.vacationNo}"></td>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td class="tg3-7btt">성명</td>
-                <td class="tg3-7btt" th:text="${ vacation.requestAdmin }"></td>
+                <td class="subTitle">성명</td>
+                <td th:text="${ vacation.requestAdmin }"></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">직급</td>
-                <td class="tg3-7btt" th:text="${adminJob}"></td>
+                <td class="subTitle">직급</td>
+                <td th:text="${adminJob}"></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">휴가명</td>
-                <td class="tg3-7btt" th:text="${ vacation.vacationName }"></td>
+                <td class="subTitle">휴가명</td>
+                <td th:text="${ vacation.vacationName }"></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">기간</td>
-                <td class="tg3-7btt"><div th:text="${ vacation.vacationStartDate }"></div>~<div th:text="${ vacation.vacationEndDate }"></div></td>
+                <td class="subTitle">기간</td>
+                <td><div th:text="${ vacation.vacationStartDate } + ' ~ ' + ${ vacation.vacationEndDate }"></div></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">연락망</td>
-                <td class="tg3-7btt" th:text="${adminPhone}"></td>
+                <td class="subTitle">연락망</td>
+                <td th:text="${adminPhone}"></td>
               </tr>
               <tr>
-                <td class="tg3-7btt">사유</td>
-                <td class="tg3-7btt"><div class="reason" name="vacationReason" th:text="${ vacation.vacationReason }">사유</div></td>
+                <td class="subTitle">사유</td>
+                <td><div class="reason" name="vacationReason" th:text="${ vacation.vacationReason }">사유</div></td>
               <tr>
-                <td class="tg3-7btt" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
+                <td class="subTitle" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
+              </tr>
+              <tr>
+              	<td class="subTitle">결재 사유</td>
+              	<td><textarea class="reasonBox" name="hrConfirmReason" cols="40" rows="5"></textarea></td>
               </tr>
             </tbody>
-            
-        </table>
-        <table class="tg" style="table-layout: fixed; width: 472px">
-          <colgroup>
-          <col style="width: 125px">
-          <col style="width: 347px">
-          </colgroup>
-          <thead>
-          <!-- <th:block sec:authorize="hasRole('MEMBER')"> -->
-            <!-- <th:block th:if="${hrReason ne null}"> -->
-            <tr>
-            
-              <td class="tg-wlph">사유</td>
-              <td class="tg-wman" >
-              	<textarea class="vacationReason" name="hrConfirmReason" cols="50" rows="5"></textarea>
-              </td>
-            </tr>
-          </thead>
-     
-          </table>
-          <input type="submit" id="approval" value="승인" formaction="approval"> 
-          <input type="submit" id="return" value="반려" formaction="return">
+           
+        </table >
+        <div class="buttonBox">
+          <input type="submit" class="approval_btn" id="approval" value="승인" formaction="approval"> 
+          <input type="submit" class="return_btn" id="return" value="반려" formaction="return">
           
           <input style="display: none;" name="adminNo" th:value="${adminNo}">
           <input style="display: none;" name="vacationNo" th:value="${vacation.vacationNo}">
+      	</div>
       </div>
     </div>
    </form> 
+   </section>
+   
    
 	 <script>
 		$("#approval").click(function(){
