2022/07/24 20:12 catch error enter키 누르면 submit되는 현상 수정

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
@@ -57,6 +57,8 @@
 		<input type="text" id="categoryValue" name="categoryValue" placeholder="휴가 내역 검색">
 		<input type="date" id="startCalendar" name="startDate" style="display: none">
 		<input type="date" id="endCalendar" name="endDate" style="display: none">
+		<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
+		
 		<input type="hidden" id="adminNo" name="adminNo" th:value="${#authentication.principal.adminNo}">
 		
 		<button type="button" id="search" onclick="vacationListAjax();">검색</button>
