--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationConfirmList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationConfirmList.html
@@ -54,6 +54,7 @@
 			</select> 
 			
 			<input type="text" id="categoryValue" name="categoryValue" placeholder="휴가 내역 검색"> 
+			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
 			<input type="date" id="startCalendar" name="startDate" style="display: none"> 
 			<input type="date" id="endCalendar" name="endDate" style="display: none">
 
