--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectBlackCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectBlackCheckListDetails.html
@@ -24,31 +24,7 @@
 		<br><br>				
 	</form>
 </section>
-<!-- textarea script -->
-<script>
-
-	$("#employeeOpnion").prop("readonly", true);
-	$("#employeeOpnion2").prop("readonly", true);
-
-	$('textarea').keyup(function(){
-		var letter = $(this).val()
-		$('#adminOpnion').html(letter)
-	})
-	
-</script>
-<!-- Submit script -->
-
-	<script>
-		const checkboxs = document.querySelectorAll('form .checklist .checkbox');
-			for(let i =0; i < checkboxs.length; i++){
-				const checkbox = checkboxs[i]
-				if(checkbox.value == "NOT"){
-					$(checkbox).attr("disabled", true)
-				} else if(checkbox.value == "YES") {
-					$(checkbox).attr("checked",true)
-					$(checkbox).attr("disabled", true)
-				};
-		};
-	</script>
 </body>
+<script src="/js/checkListCheckBox2.js"></script>
+<script src="/js/employeeTextArea.js"></script>
 </html>
