--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -25,6 +25,16 @@
             </table>
         </div>
     </div>
+    <script>
+    if(document.getElementById("move")){
+    	$("#move").bind("click", function(){});
+    	$("#move").trigger("click");
+		document.getElementById("move").onclick = function(){
+			console.log("가냐!!!!!!!!!!!!!!!!!!!!!")
+			location.href="/main"
+		}    	
+    }
+    </script>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid upnavvar">
@@ -67,7 +77,6 @@
                 </div>
             </div>
         </nav>
-
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid downnavbar">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -205,4 +214,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
    	<script src="/js/socket.js"></script>
+   	
 </html>
