--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -116,146 +116,13 @@
 
     </script>	 	
 	
-	<!-- fileUpload script -->
-	<script>
-	
-	const $contentImgArea1 = document.getElementById("contentImgArea1");
-	const $contentImgArea2 = document.getElementById("contentImgArea2");
-	
-	$contentImgArea1.onclick = function() {
-				document.getElementById("thumbnailImg1").click();
-			}
-	$contentImgArea2.onclick = function() {
-				document.getElementById("thumbnailImg2").click();
-			}
-	
-	function loadImg(value, num) {
-				
-		if (value.files && value.files[0]) {			
-			const reader = new FileReader();
-					
-			reader.readAsDataURL(value.files[0]);		
-						
-			reader.onload = function(e) {	
-				switch(num){
-					case 1:
-						document.getElementById("beforeImg").src = e.target.result;
-						break;
-					case 2:
-						document.getElementById("afterImg").src = e.target.result;
-						break;
-				}
-								
-			}
-		}
-	}
+	<script 
+		src="/js/checkListFile.js"></script>
+	<script 
+		src="/js/checkListCheckBox.js"></script>
+	<script 
+		src="/js/checkListCanvas.js"></script>
 
-	</script>	
-			
-	<!-- checkBox script -->		
-	<script>
-	$("input[type='checkbox']").each(function(){
-		if($(this).is(":checked") == true){
-			$(this).val("YES");
-		} else if($(this).is(":checked") == false){
-			$(this).val("NOT")
-		}
-	});
-
-	$("input[type='checkbox']").change(function(){
-		if($(this).is(":checked") == true){
-			$(this).val("YES");
-		} else{
-			$(this).val("NOT");
-		}
-	});
-
-	</script>
-	
-	<!--  canvas script -->
-	<script>
-	$(document).ready(function() {
-		(function(obj){      
-		                    obj.init();      
-		                    $(obj.onLoad);
-		                })
-		                    ((function(){      
-		                        var canvas = $("#canvas");      
-		                        var div = canvas.parent("div");      
-		
-		                        var ctx = canvas[0].getContext("2d");      
-		                        var drawble = false;            
-		
-		                        function canvasResize(){        
-		                            canvas[0].height = div.height();        
-		                            canvas[0].width = div.width();      
-		                        }      
-		
-		                        // PC 
-		                        function draw(e){        
-		                            function getPosition(){          
-		                                return {            
-		                                    X: e.pageX - canvas[0].offsetLeft,             
-		                                    Y: e.pageY - canvas[0].offsetTop          
-		                                }        
-		                            }        
-		                            switch(e.type){          
-		                                case "mousedown":{            
-		                                    drawble = true;            
-		                                    ctx.beginPath();            
-		                                    ctx.moveTo(getPosition().X, 
-		                                    getPosition().Y);          
-		                                }     
-		
-		                                break;          
-		                                
-		                                case "mousemove":{            
-		                                    if(drawble){              
-		                                        ctx.lineTo(getPosition().X, 
-		                                        getPosition().Y);              	
-		                                        ctx.stroke();            
-		                                    }          
-		                                }          
-		                                
-		                                break;          
-		                                
-		                                case "mouseup":          
-		                                case "mouseout":{            
-		                                    drawble = false;            
-		                                    ctx.closePath();          
-		                                }          break;        
-		                            }      
-		                        }       
-		
-		                        return {init: function(){          
-		                            $(window).on("resize", canvasResize);                    
-		                            canvas.on("mousedown", draw);          
-		                            canvas.on("mousemove", draw);          
-		                            canvas.on("mouseup", draw);          
-		                            canvas.on("mouseout", draw);  
-		
-		                            $("#save").on("click", function(){     
-		                            	const canvas = document.getElementById('canvas');
-		                            	dataURL = canvas.toDataURL();
-		                            	document.getElementById("signImg").src = dataURL;
-		                            	document.getElementById("canvas").remove();
-		                            	
-		                            });        
-		                            
-		                            $("#reset").on("click", function(){
-		
-		                                ctx.clearRect(0, 0, 800, 600);
-		                            })
-		
-		                        },        
-		                        
-		                        onLoad: function(){          
-		                            canvasResize();        
-		                            }}})());  
-			
-							
-	});			
-	</script>
 </body>
 
 	<script
