--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
@@ -84,7 +84,7 @@
 				
 			} else {
 				
-			
+				
 	    		if(confirm("서류를 반려하시겠습니까? 직원에게 알림이 전송됩니다.")){
 	    			
 	    			$("#path").val("/employee/checkList/denial/select")
@@ -177,23 +177,6 @@
     	}
     </script>	
 
-<!-- checkbox sciprt -->
-<script>
-
-	const checkboxs = document.querySelectorAll('form .checklist .checkbox');
-		for(let i =0; i < checkboxs.length; i++){
-			const checkbox = checkboxs[i]
-			if(checkbox.value == "NOT"){
-				$(checkbox).attr("disabled", true)
-			} else if(checkbox.value == "YES") {
-				$(checkbox).attr("checked",true)
-				$(checkbox).attr("disabled", true)
-			};
-			
-		};
-
-</script>
-
 </body>
 
 	<script
@@ -204,5 +187,6 @@
    		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script
 		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-
+	<script 
+		src="/js/checkListCheckBox2.js"></script>
 </html>
