--- a/com-project-clean/src/main/resources/templates/common/checkListAside.html
+++ b/com-project-clean/src/main/resources/templates/common/checkListAside.html
@@ -4,6 +4,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link 
+		rel="stylesheet" 
+    	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
+    <script 
+    	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
 body {
   font-family: "Lato", sans-serif;
@@ -73,7 +78,7 @@ section{
 <body>
 
 <div class="sidenav">
-	<button class="dropdown-btn">급여관리
+	<button class="dropdown-btn">업무관리
 		<i class="fa fa-caret-down"></i>
 	</button>
 	
